fix overflow-y problem with #previous-operations

--- a/style.css
+++ b/style.css
@@ -101,6 +101,8 @@ body {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  max-height: 600px;
+  overflow-y: scroll;
 }
 
 #clear-history-btn {
